<resources>
    <string name="app_name">FindGym</string>
    <string name="facebook_app_id">610402612657154</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="Already">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="title_activity_maps">Map</string>
</resources>
